--- a/LearnOpenTK/LearnOpenTK.csproj
+++ b/LearnOpenTK/LearnOpenTK.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="OpenTK" Version="5.0.0-pre.7" />
+      <PackageReference Include="StbImageSharp" Version="2.27.12" />
     </ItemGroup>
 
     <ItemGroup>
@@ -14,6 +15,9 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="shader.vert">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="1.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
